# esp-4diac-forte

./: .deepsource.toml  .gitlab-ci.yml  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
components/esp-4diac-forte-component/: CMakeLists.txt
test_apps/TestApplication/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
test_apps/TestApplication/components/Network_softAP/: CMakeLists.txt  Kconfig.projbuild  softap_example_main.c
test_apps/TestApplication/components/forte_main/: CMakeLists.txt  forte_main.cpp
test_apps/TestApplication/main/: main.c
